# Automated-Trading-System

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: OrderBook.hpp  cli_demo.cpp  main.cpp
src/benchmark/: benchmark.cpp
src/matching/: MatchingEngine.cpp  MatchingEngine.hpp  matchingengine.hpp
src/orderbook/: OrderBook.cpp  OrderBook.hpp
tests/: MatchingEngineTest.cpp  OrderBookTest.cpp  Setup.hpp
